[package]
name = "asport-client"
version = "0.3.0"
authors = ["Kaede Akino <i@akinokae.de>"]
description = "A simple Asport client implementation."
categories = ["network-programming"]
keywords = ["network", "proxy", "reverse-proxy", "quic", "asport"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/AkinoKaede/asport"

[dependencies]
asport = { path = "../asport", version = "0.3.0" }
asport-quinn = { path = "../asport-quinn", version = "0.3.0" }
asport-common = { path = "../asport-common", version = "0.3.0" }
bytes = { version = "1.7.1", default-features = false, features = ["std"] }
clap = { version = "4.5.16", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
config = { version = "0.15.14", default-features = false, features = ["async", "convert-case", "json", "json5", "ron", "toml", "yaml"] }
crossbeam-utils = { version = "0.8.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "humantime"] }
humantime = { version = "2.1.0", default-features = false }
log = { version = "0.4.22", default-features = false, features = ["serde", "std"] }
parking_lot = { version = "0.12.3", default-features = false, features = ["send_guard"] }
ppp = { version = "2.2.0", default-features = false }
quinn = { version = "0.11.4", default-features = false, features = ["futures-io", "runtime-tokio", "rustls"] }
quinn-hyphae = { git = "https://github.com/AkinoKaede/hyphae-handshake", branch = "0.1.0-beta.0-ekm", package = "quinn-hyphae", default-features = false, features = ["rustcrypto", "helper"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
rustls = { version = "0.23.12", default-features = false }
rustls-native-certs = { version = "0.8.0", default-features = false }
rustls-pemfile = { version = "2.1.2", default-features = false, features = ["std"] }
serde = { version = "1.0.209", default-features = false, features = ["derive", "std"] }
socket2 = { version = "0.6.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.11", default-features = false, features = ["compat"] }
uuid = { version = "1.18.0", default-features = false, features = ["serde", "std", "v4"] }

[dev-dependencies]
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]

