[package]
name = "asport-quinn"
version = "0.2.0"
authors = ["Kaede Akino <i@akinokae.de>"]
description = "A wrapped quinn to implement ASPORT protocol."
categories = ["network-programming"]
keywords = ["network", "proxy", "reverse-proxy", "quic", "asport"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/AkinoKaede/asport"

[dependencies]
asport = { path = "../asport", version = "0.2.0", features = ["async_marshal", "marshal", "model"] }
bytes = { version = "1.6.1", default-features = false, features = ["std"] }
futures-util = { version = "0.3.30", default-features = false, features = ["io", "std"] }
quinn = { version = "0.11.4", default-features = false, features = ["futures-io"] }
thiserror = { version = "2.0.12", default-features = false }
uuid = { version = "1.10.0", default-features = false, features = ["std"] }