[package]
name = "asport-server"
version = "0.1.2"
authors = ["Kaede Akino <i@akinokae.de>"]
description = "A simple Asport server implementation."
categories = ["network-programming"]
keywords = ["network", "proxy", "reverse-proxy", "quic", "asport"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/AkinoKaede/asport"

[dependencies]
asport = { path = "../asport", version = "0.1.0" }
asport-quinn = { path = "../asport-quinn", version = "0.1.1" }
bimap = { version = "0.6.3", default-features = false, features = ["std"] }
bytes = { version = "1.7.2", default-features = false, features = ["std"] }
clap = { version = "4.5.16", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
config = { version = "0.14.0", default-features = false, features = ["async", "convert-case", "json", "json5", "ron", "toml", "yaml"] }
crossbeam-utils = { version = "0.8.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "humantime"] }
humantime = { version = "2.1.0", default-features = false }
log = { version = "0.4.22", default-features = false, features = ["serde", "std"] }
parking_lot = { version = "0.12.3", default-features = false, features = ["send_guard"] }
quinn = { version = "0.11.4", default-features = false, features = ["futures-io", "runtime-tokio", "rustls"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
rustls = { version = "0.23.11", default-features = false }
rustls-pemfile = { version = "2.1.2", default-features = false, features = ["std"] }
serde = { version = "1.0.209", default-features = false, features = ["derive", "std"] }
socket2 = { version = "0.5.7", default-features = false }
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.11", default-features = false, features = ["compat"] }
uuid = { version = "1.10.0", default-features = false, features = ["serde", "std"] }
xdg = { version = "2.5.2", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.127", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]
xdg = { version = "2.5.2", default-features = false }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "freebsd", target_os = "linux", target_os = "android"))'.dependencies]
sysctl = { version = "0.5.5", default-features = false }