[package]
name = "asport"
version = "0.1.0"
authors = ["Kaede Akino <i@akinokae.de>"]
description = "An implementation of ASPORT protocol."
categories = ["network-programming"]
keywords = ["network", "proxy", "reverse-proxy", "quic", "asport"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/AkinoKaede/asport"

[features]
async_marshal = ["bytes", "futures-util"]
marshal = ["bytes"]
model = ["parking_lot", "register-count"]

[dependencies]
bytes = { version = "1.9.0", default-features = false, features = ["std"], optional = true }
futures-util = { version = "0.3.28", default-features = false, features = ["io", "std"], optional = true }
parking_lot = { version = "0.12.1", default-features = false, optional = true }
register-count = { version = "0.1.0", default-features = false, features = ["std"], optional = true }
thiserror = { version = "1.0.62", default-features = false }
uuid = { version = "1.10.0", default-features = false, features = ["std"] }

[dev-dependencies]
asport = { path = ".", features = ["async_marshal", "marshal", "model"] }

[package.metadata.docs.rs]
all-features = true